@@ -7,6 +7,9 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2020-02-03 Mikhail Dubrovin
+- add issue_2021_02_02 in examples/test-issues-2021.py
+
 Tag: V02-00-03
 2020-01-26 Mikhail Dubrovin
 - src/UtilsEpix10ka.py fix undefined gr0 - issue reported by Silke
